feat: fix when create user through gorm db cause a bug
