# docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "A simple RBAC base framework built by go.",
-        "title": "unicorn framework",
+        "description": "一个使用Go开发的RBAC基础框架",
+        "title": "unicorn Framework",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "ppxb",
@@ -83,7 +83,23 @@
     },
     "definitions": {
         "request.CreateUser": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "mobile": {
+                    "type": "string",
+                    "example": "18111111111"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "张三"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "roleId": {
+                    "type": "integer"
+                }
+            }
         },
         "resp.Response": {
             "type": "object",
